# data-engineering

./: .airflowignore  .cruft.json  .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
build_images/cloudbuild/: Dockerfile  create_image  requirements.txt  substitute.bash
build_images/dbt/: Dockerfile  create_dbt_image
dbt/: Dockerfile  dbt_project.yml
metadata/main_dags/: test_dag.json
metadata/tag_templates/: tag_templates.yaml
pipelines/: .airflow_vars  .airflowignore  Makefile
pipelines/airflow-local-setup/: Dockerfile  credentials_volume.yaml  dags_volume.yaml  kind-cluster-template.yaml  requirements.txt  setup  values-template.yaml
pipelines/custom_operators/: __init__.py  airflow_sensor_wait_for_files_deferred.py  pubsub_deferred.py  trigger_cloudrun.py
pipelines/dags/: __init__.py  gcs_2_bq_task_scaling.py  prefix_sensor_deferred.py  trigger_cloudrun.py  trigger_cloudrun_dag.py
pipelines/dbt/: dbt_project.yml
pipelines/shared/: __init__.py  airflow_utils.py  converters.py  dag_loaders.py  pause_and_unpause_dags.py  validators.py
pipelines/sql/: filter_pii_data.sql
pyspark/: .gitignore  Makefile  Readme.md  stocks.csv
pyspark/spark_tests/: __init__.py
pyspark/src/: __init__.py  main.py
scripts/: __init__.py  create_new_branch.sh  install_vscode_extensions.sh  write_model_to_dbt
scripts/python_helpers/: helpers.py
terraform_cdk/: cdktf.json  generate_tag_templates.py  main.py
testdata/: census.csv
tests/: __init__.py  test_write_model_to_dbt.py
(+25 files in other folders)
